<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9A8A6E"
    android:backgroundTint="#BA8888"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/question_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#BAC0F3"
        android:paddingStart="35sp"
        android:paddingEnd="30sp"
        android:text="@string/Q1"
        android:textColor="@color/cardview_dark_background"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/cheat_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/write_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70sp"
        android:orientation="horizontal">

    </LinearLayout>

    <Button
        android:id="@+id/cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#490C0C"
        android:text="@string/cheat_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="298dp" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#E45F5F"
        android:text="@string/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheat_button" />

    <Button
        android:id="@+id/pre_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="260dp"
        android:text="@string/pre_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_btn" />

    <Button
        android:id="@+id/false_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_weight="1"
        android:backgroundTint="@color/false_btn"
        android:text="@string/false_button"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="238dp" />

    <Button
        android:id="@+id/true_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:backgroundTint="@color/true_btn"
        android:text="@string/true_button"
        app:layout_constraintEnd_toStartOf="@+id/false_btn"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="238dp" />

</androidx.constraintlayout.widget.ConstraintLayout>